--- a/src/components/dialog/DialogOptions.css
+++ b/src/components/dialog/DialogOptions.css
@@ -1,4 +1,5 @@
 /* Dialog Options Component */
+
 /* Selectable options list with retro adventure game styling */
 
 .dialog-options {
@@ -7,7 +8,7 @@
   gap: 4px;
   margin-top: 16px;
   padding-top: 12px;
-  border-top: 1px solid rgba(42, 58, 74, 0.5);
+  border-top: 1px solid rgb(42 58 74 / 50%);
 }
 
 .dialog-options__item {
@@ -27,6 +28,11 @@
   transition: color 0.15s ease;
 }
 
+.dialog-options__item:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
 .dialog-options__item:hover:not(:disabled) {
   color: #c0d0e0;
 }
@@ -37,11 +43,6 @@
 
 .dialog-options__item--selected:hover:not(:disabled) {
   color: #5aee90;
-}
-
-.dialog-options__item:disabled {
-  cursor: default;
-  opacity: 0.5;
 }
 
 .dialog-options__marker {
@@ -65,6 +66,7 @@
   100% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.5;
   }
