--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -6,6 +6,7 @@
   100% {
     transform: rotate(-2deg) translateX(0);
   }
+
   50% {
     transform: rotate(2deg) translateX(2px);
   }
@@ -17,6 +18,7 @@
   100% {
     transform: rotate(0deg);
   }
+
   50% {
     transform: rotate(6deg);
   }
@@ -29,11 +31,13 @@
   100% {
     opacity: 1;
   }
+
   93%,
   95%,
   97% {
     opacity: 0.4;
   }
+
   94%,
   96%,
   98% {
@@ -47,6 +51,7 @@
   100% {
     transform: scaleY(1);
   }
+
   50% {
     transform: scaleY(1.02);
   }
@@ -58,6 +63,7 @@
   100% {
     filter: brightness(1);
   }
+
   50% {
     filter: brightness(1.2);
   }
@@ -68,9 +74,10 @@
   0%,
   90%,
   100% {
-    background-color: #33cc33;
+    background-color: #3c3;
   }
+
   45% {
-    background-color: #66ff66;
+    background-color: #6f6;
   }
 }
