--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
    ============================================ */
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
 
 /* ============================================
    RESET & BASE STYLES
